# altruism

./: README.md
altruism/: CMakeLists.txt  package.xml
altruism/config/: altruism_config.yaml
altruism/include/altruism/: altruism_helpers.hpp  bandit_action_node.h  identify_action_node.h  nfr_node.h  random_action_node.h  reactive_action_node.h  slam_action_node.h  system_attribute_value.hpp  variable_action_node.h
altruism/launch/: action_servers_launch.py  arborist_launch.py  bandit_action_servers_launch.py  custom_world.launch.py  multirbnav2.launch.py  nav2_slam_launch.py  random_action_servers_launch.py  reactive_action_servers_launch.py  sim_world_launch.py  spawn_tb3.launch.py  system_reflection_launch.py
altruism/scripts/: ID_action_server.py  SLAM_action_server.py  adaptation_manager_node.py  bandit_action_server.py  blackboard_client.py  blackboard_get_client.py  blackboard_set_client.py  random_action_server.py  reactive_action_server.py  save_map_client.py  system_reflection.py  tree_action_client.py  utility_node.py  weights_set_client.py
altruism/src/: arborist_node.cpp  cpp_node.cpp  nfr_node.cpp  safety_nfr.cpp  system_attribute_value.cpp
altruism/trees/: Bandit.xml  full_tree.xml  onlyID.xml  onlyIDBandit.xml  onlyIDBanditEXP3.xml  onlyIDBanditgrdy.xml  onlyIDRandom.xml  onlyIDReactive.xml
altruism/worlds/: bigger_boxes.world  boxes.world  custom_world.world  dark_world.world  sparse_world.world
altruism_msgs/: CMakeLists.txt  package.xml
altruism_msgs/action/: Bandit.action  BehaviorTree.action  Identify.action  Random.action  SLAM.action
altruism_msgs/msg/: AdaptationState.msg  Configuration.msg  NFR.msg  NodeConfiguration.msg  ObjectsIdentified.msg  QRValue.msg  SystemAttribute.msg  SystemAttributeType.msg  SystemAttributeValue.msg  VariableParameter.msg  VariableParameters.msg
altruism_msgs/srv/: GetBlackboard.srv  GetNFR.srv  GetVariableParams.srv  SetAttributeInBlackboard.srv  SetBlackboard.srv  SetWeights.srv
energy_experiments/: monitor  results_template.txt
energy_experiments/results/: boxplots.ipynb
energy_experiments/results/.ipynb_checkpoints/: boxplots-checkpoint.ipynb
energy_experiments/results/dog_run_14/: out.txt  power.txt
energy_experiments/results/dog_run_18/: out.txt  power.txt
energy_experiments/results/dog_run_27/: out.txt  power.txt
energy_experiments/results/dog_run_3/: out.txt  power.txt
energy_experiments/results/dog_run_30/: out.txt  power.txt
energy_experiments/results/dog_run_38/: out.txt  power.txt
energy_experiments/results/dog_run_47/: out.txt  power.txt
energy_experiments/results/dog_run_53/: out.txt  power.txt
energy_experiments/results/dog_run_56/: out.txt  power.txt
energy_experiments/results/dog_run_6/: out.txt  power.txt
energy_experiments/results/eagle_run_0/: out.txt  power.txt
energy_experiments/results/eagle_run_12/: out.txt  power.txt
energy_experiments/results/eagle_run_23/: out.txt  power.txt
energy_experiments/results/eagle_run_25/: out.txt  power.txt
energy_experiments/results/eagle_run_35/: out.txt  power.txt
energy_experiments/results/eagle_run_36/: out.txt  power.txt
energy_experiments/results/eagle_run_42/: out.txt  power.txt
energy_experiments/results/eagle_run_48/: out.txt  power.txt
energy_experiments/results/eagle_run_57/: out.txt  power.txt
energy_experiments/results/eagle_run_9/: out.txt  power.txt
energy_experiments/results/horses_run_15/: out.txt  power.txt
energy_experiments/results/horses_run_21/: out.txt  power.txt
energy_experiments/results/horses_run_29/: out.txt  power.txt
energy_experiments/results/horses_run_34/: out.txt  power.txt
energy_experiments/results/horses_run_40/: out.txt  power.txt
energy_experiments/results/horses_run_43/: out.txt  power.txt
energy_experiments/results/horses_run_5/: out.txt  power.txt
energy_experiments/results/horses_run_50/: out.txt  power.txt
energy_experiments/results/horses_run_58/: out.txt  power.txt
energy_experiments/results/horses_run_7/: out.txt  power.txt
energy_experiments/results/kite_run_13/: out.txt  power.txt
energy_experiments/results/kite_run_2/: out.txt  power.txt
energy_experiments/results/kite_run_20/: out.txt  power.txt
energy_experiments/results/kite_run_24/: out.txt  power.txt
energy_experiments/results/kite_run_33/: out.txt  power.txt
energy_experiments/results/kite_run_37/: out.txt  power.txt
energy_experiments/results/kite_run_44/: out.txt  power.txt
energy_experiments/results/kite_run_49/: out.txt  power.txt
energy_experiments/results/kite_run_54/: out.txt  power.txt
energy_experiments/results/kite_run_8/: out.txt  power.txt
energy_experiments/results/person_run_11/: out.txt  power.txt
energy_experiments/results/person_run_16/: out.txt  power.txt
energy_experiments/results/person_run_22/: out.txt  power.txt
energy_experiments/results/person_run_28/: out.txt  power.txt
energy_experiments/results/person_run_32/: out.txt  power.txt
energy_experiments/results/person_run_39/: out.txt  power.txt
energy_experiments/results/person_run_4/: out.txt  power.txt
energy_experiments/results/person_run_45/: out.txt  power.txt
energy_experiments/results/person_run_51/: out.txt  power.txt
energy_experiments/results/person_run_59/: out.txt  power.txt
energy_experiments/results/scream_run_1/: out.txt  power.txt
ubuntu_run_scripts/: action_servers.sh  arborist.sh  build_all.sh  build_all_clean.sh  build_altruism.sh  darknet.sh  demo.sh  demo_onlyid.sh  demo_onlyidbandit.sh  evaluation1.sh  gazebo_tb3.sh  id_action_server.sh  map_1694604030.pgm  map_1694604030.yaml  map_1694604036.yaml  nav2.sh  nav2_map.sh  sysrefl.sh  tree_action.sh
(+18 files in other folders)
